--- a/styles.css
+++ b/styles.css
@@ -11,11 +11,19 @@ body{
 
 .navbar-brand{
     font-family: 'Silkscreen', cursive;
-    font-size: 5em;
+    font-size: 3em;
 }
-.collapse{
+/* .collapse{
     font-family: 'Silkscreen', cursive;
-}
+} */
+
+ /* @media (max-width: 900px){
+
+        .collapse{
+            font-family: 'Silkscreen', cursive;
+        }    
+
+} */
 
 #title {
     background-color: black ;
@@ -31,22 +39,59 @@ h1{
     font-size: 3rem;
 }
 
+/* #Embreve{
+    margin-top: 50em;
+} */
+
+h2{
+    font-family: 'Manrope', sans-serif;
+    color: beige;
+    font-size: 3rem;
+    text-align: center;
+    margin: 15em,0em,15em,0em; 
+}
+
 p{
     font-family: 'Manrope', sans-serif;
     color: beige;
     font-size: 1.5rem;
+    margin-left: 2.5em;
 
 }
 
 .entry{
     padding-top: 10em;
-    padding-left: 6em;
+    padding-left: 2em;
+    
 }
+
+a{
+    color: currentColor;
+    text-decoration: none;
+}
+
+.btn{
+    margin-left: 3em;
+    margin-top: 0.5em;
+    
+}
+
+.row{
+    margin-bottom: 8em;
+}
+
+.row2{
+    padding-top: 8em;
+    padding-bottom: 18em;
+}
+
 @media (max-width: 900px){
+    
+
     h1{
         font-family: 'Manrope', sans-serif;
         color: beige;
-        font-size: 2.5rem;
+        font-size: 1.5rem;
         text-align: center;
     }
 
@@ -62,6 +107,14 @@ p{
         padding-top: 0em;
         padding-left: 0em;
     }
+
+    .btn{
+        height: 6vh;
+        width: 15vh;
+        font-size: 2vh;
+        margin-left: 2em;
+        margin-top: 0em;
+    }
 }  
 
 .globo{
@@ -69,9 +122,9 @@ p{
     height: 100vh; */
     /* background-size: cover;
     scale: 16/9; */
-    height: 570px;
-    width: 570px;
-    margin-top: 2em;
+    height: 500px;
+    width: 500px;
+    margin-top: 0em;
 } 
 
 .imgG {
@@ -86,7 +139,7 @@ p{
 @media (max-width: 900px){
     .globo{
         margin-top: 2em;
-        width: 320px;
-        height: 320px;
+        width: 280px;
+        height: 280px;
     }
 }  
