--- a/styles.css
+++ b/styles.css
@@ -108,16 +108,12 @@ a{
     h1{
         font-family: 'Manrope', sans-serif;
         color: white;
-        font-size: 1.5rem;
+        font-size: 3rem;
         text-align: center;
     }
 
-    p{
-        font-family: 'Manrope', sans-serif;
-        color: white;
-        font-size: 1.1rem;
-        text-align: center;
-
+    h6{
+      font-size: 1rem;  
     }
 
     .entry{
@@ -135,12 +131,12 @@ a{
 }  
 
 .globo{
-    /* width: 45vw;
-    height: 100vh; */
-    /* background-size: cover;
-    scale: 16/9; */
-    height: 500px;
-    width: 500px;
+    width: 0;
+    height: 0; 
+    background-size: cover;
+    scale: 16/9; 
+    height: 100%;
+    width: 100%;
     margin-top: 0em;
 } 
 
@@ -160,4 +156,3 @@ a{
         height: 280px;
     }
 }  
-
